--- a/assignment6/css/style.css
+++ b/assignment6/css/style.css
@@ -6,5 +6,7 @@
     /*Add space between the boarder and its inside elements. */
     padding: 10px;
     /* Color the background dark grey. */
-    background image: href=" ../images/1960s.png";
+    background image: url=" ../images/1960s.png";
+    background-color: yellowgreen
+    
 }
