--- a/assignment6/css/style.css
+++ b/assignment6/css/style.css
@@ -1,12 +1,8 @@
 .main-container {
-    /* Draw a lime green border 2px thick. */
     border-style: solid;
     border-width: 2px;
-    border-color: limegreen;
-    /*Add space between the boarder and its inside elements. */
+    border-color: darkblue;
     padding: 10px;
-    /* Color the background dark grey. */
-    background image: url=" ../images/1960s.png";
     background-color: yellowgreen
-    
+    h1: darkblue; text-align: center; color: darkblue
 }
