--- a/assignment6/css/style.css
+++ b/assignment6/css/style.css
@@ -3,6 +3,4 @@
     border-width: 2px;
     border-color: darkblue;
     padding: 10px;
-    background-color: yellowgreen;
-    h1: darkblue; text-align: center; color: darkblue
-}
+    background-color: yellowgreen}
