--- a/assignment6/css/style.css
+++ b/assignment6/css/style.css
@@ -1,10 +1,10 @@
 .main-container {
     border-style: solid;
-    border-width: 2px;
+    border-width: 5px;
     border-color: darkblue;
     padding: 10px;
     background-color: yellowgreen;
-    height: 300px}
+    height: 250px}
 .second-container.inner{
     border-style: dotted
     border-width: 5px;
@@ -12,5 +12,7 @@
     opacity: .50px;
     padding: 10px;
     background-color: crimson;
+    width: 70%;
+    height: 200px
 }
 .third-container{}
