--- a/assignment6/css/style.css
+++ b/assignment6/css/style.css
@@ -6,20 +6,35 @@
     background-color: yellowgreen;
     height: 400px;
     width: 400px}
-.box1.inner{
-    font-family: fantasy !important;
-    border-style: dotted;
-    border-width: 5px;
-    border-color: darkblue;
-    opacity: .5;
-    padding: 30px;
-    background-color: rgb(220,20,60);
-    width: 500px;
-    height: 300px;
-    position: absolute;
-    margin-right: auto;
-    top: 150px;
-    margin-left: 40px}
+      .box1.inner{
+        font-family: fantasy !important;
+        border-style: dotted;
+        border-width: 5px;
+        border-color: darkblue;
+        opacity: .5;
+        padding: 30px;
+        background-color: rgb(220,20,60);
+        width: 500px;
+        height: 300px;
+        position: absolute;
+        margin-right: auto;
+        top: 150px;
+        margin-left: 40px}
 .box2{
-  
+  border-style: groove;
+  border-width: 5px;
+  border-color: darkblue;
+  opacity: .75;
+  padding: 20px;
+  background-color: rgb(148,0,211);
+  width: 300px;
+  height: 200px;
+  position: absolute;
+  margin-left: 80px;
+  top: 300px}
+
+
+
+
+
 }
