--- a/assignment7/css/fonts.css
+++ b/assignment7/css/fonts.css
@@ -1,8 +1,11 @@
-.box1{
-    border-style: solid;
-    border-width: 5px;
-    border-color: black;
-    padding: 10px;
-    background-color: oldlace;
-    height: 600px;
-    width: 800px}
+
+@font-face {font-family: 'unifrakturcook';
+  src:url('../fonts/UnifrakturCook-Bold.ttf') format('opentype');
+  font-weight: normal;
+  font-size: 56px;
+  font-style: normal}
+
+@font-face {font-family: 'canon';
+  src: url('../fonts/IMFeFCit28P.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal}
