--- a/assignment7/css/styles.css
+++ b/assignment7/css/styles.css
@@ -1,6 +1,8 @@
 body{background-color: #000080}
 
 .container {
+    margin-left: auto;
+    margin-right: auto;
     border-style: solid;
     border-width: 5px;
     border-color: black;
